--- a/image/etc/supervisor/conf.d/supervisord.conf
+++ b/image/etc/supervisor/conf.d/supervisord.conf
@@ -11,37 +11,37 @@ redirect_stderr=true
 
 [program:lxsession]
 priority=15
-directory=/root
+directory=/config
 command=/usr/bin/openbox
 user=root
 autostart=true
 autorestart=true
 stopsignal=QUIT
-environment=DISPLAY=":1",HOME="/root",USER="root"
+environment=DISPLAY=":1",HOME="/config",USER="root"
 stdout_logfile=/var/log/openbox.log
 redirect_stderr=true
 
 [program:lxpanel]
 priority=15
-directory=/root
+directory=/config
 command=/usr/bin/lxpanel --profile LXDE
 user=root
 autostart=true
 autorestart=true
 stopsignal=QUIT
-environment=DISPLAY=":1",HOME="/root",USER="root"
+environment=DISPLAY=":1",HOME="/config",USER="root"
 stdout_logfile=/var/log/lxpanel.log
 redirect_stderr=true
 
 [program:pcmanfm]
 priority=15
-directory=/root
+directory=/config
 command=/usr/bin/pcmanfm --desktop --profile LXDE
 user=root
 autostart=true
 autorestart=true
 stopsignal=QUIT
-environment=DISPLAY=":1",HOME="/root",USER="root"
+environment=DISPLAY=":1",HOME="/config",USER="root"
 stdout_logfile=/var/log/pcmanfm.log
 
 
