--- a/image/etc/supervisor/conf.d/supervisord.conf
+++ b/image/etc/supervisor/conf.d/supervisord.conf
@@ -44,6 +44,17 @@ stopsignal=QUIT
 environment=DISPLAY=":1",HOME="/config",USER="root"
 stdout_logfile=/var/log/pcmanfm.log
 
+[program:pulseaudio]
+priority=15
+directory=/config
+command=/usr/bin/pulseaudio
+user=root
+autostart=true
+autorestart=true
+stopsignal=TERM
+environment=DISPLAY=":1",HOME="/config",USER="root"
+stdout_logfile=/var/log/pulseaudio.log
+stderr_logfile=/var/log/pulseaudio.err
 
 [program:x11vnc]
 priority=20
